--- a/components/card/card.wxml
+++ b/components/card/card.wxml
@@ -2,9 +2,11 @@
 	<view bindtap="selBox" data-pid="{{selectCards['card'+item] ? selectCards['card'+item].pid : ''}}" data-id="card{{item}}" data-lid="{{item}}"   
 		class="flex-item {{selectCards['card'+item] ? 'car' : ''}}  {{sel === item ? 'selected' : ''}}">
        <block wx:if="{{selectCards['card'+item]}}">
-        <span class="icon {{color[selectCards['card'+item].c]}}">{{shape[selectCards['card'+item].c]}}</span>
+        <image class="cardImg" src='{{"/images/" + selectCards["card"+item].id + "_" + selectCards["card"+item].c + ".png"  }}'></image>
+       <image class="cardImg"  src='{{"/images/" + selectCards["card"+item].c + ".png"  }}'></image>
+        <!-- <span class="icon {{color[selectCards['card'+item].c]}}">{{shape[selectCards['card'+item].c]}}</span>
         <span class="number  {{color[selectCards['card'+item].c]}} {{selectCards['card'+item].id == 4 ? 'small' : ''}}">
-        {{cards[selectCards['card'+item].id]}}</span>
+        {{cards[selectCards['card'+item].id]}}</span> -->
         </block>
         <block wx:else>
         	<view class="unknown">?</view>
