--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -65,7 +65,7 @@
     <view style="position: relative;">
       <view class="useforever">开通永久使用权</view>
     </view>
-    <view class="debao" bindtap="debao" data-fid="0"><view></view> 登录／注册德堡账户(免费)</view>
+    <view class="debao" bindtap="login" data-fid="0"><view></view> 登录／注册德堡账户(免费)</view>
     <view class="pay" bindtap="pay" data-fid="0">付费开通(30元)</view>
   </view>
   <view class="startUse {{ setp[0] === 0 ? '' : 'none'}}" bindtap="using">{{open ? '开始试用' : '确定'}}</view>
@@ -95,7 +95,29 @@
   </view>
   <view class="flex column en">
     <view class="flex-wrp">
-      <template wx:for="{{[4,5]}}" wx:key="index"  is="card" data="{{...selectCards,cards,sel,shape,color,item}}" />
+      <view class="border_dashed"></view>
+      <view bindtap="selBox" data-pid="{{selectCards.selectCards['card4'] ? selectCards.selectCards['card4'].pid : ''}}" data-id="card4" data-lid="4"   
+    class="flex-item {{selectCards.selectCards['card4'] ? 'car' : ''}}  {{sel == 4 ? 'selected' : ''}}">
+       <block wx:if="{{selectCards.selectCards['card4']}}">
+        <image class="cardImg" src='{{"/images/" + selectCards.selectCards["card4"].id + "_" + selectCards.selectCards["card4"].c + ".png"  }}'></image>
+       <image class="cardImg"  src='{{"/images/" + selectCards.selectCards["card4"].c + ".png"  }}'></image>
+        </block>
+        <block wx:else>
+          <view class="unknown">?</view>
+        </block>
+      </view>
+    <view class="border_dashed"></view>
+    <view bindtap="selBox" data-pid="{{selectCards.selectCards['card5'] ? selectCards.selectCards['card5'].pid : ''}}" data-id="card5" data-lid="5"   
+    class="flex-item {{selectCards.selectCards['card5'] ? 'car' : ''}}  {{sel == 5 ? 'selected' : ''}}">
+       <block wx:if="{{selectCards.selectCards['card5']}}">
+        <image class="cardImg" src='{{"/images/" + selectCards.selectCards["card5"].id + "_" + selectCards.selectCards["card5"].c + ".png"  }}'></image>
+       <image class="cardImg"  src='{{"/images/" + selectCards.selectCards["card5"].c + ".png"  }}'></image>
+        </block>
+        <block wx:else>
+          <view class="unknown">?</view>
+        </block>
+    </view>
+      <!-- <template wx:for="{{[4,5]}}" wx:key="index"  is="card" data="{{...selectCards,cards,sel,shape,color,item}}" /> -->
     </view>
   </view>
 </view>
@@ -103,7 +125,8 @@
   <view class="v-scroll">
   <scroll-view scroll-y scroll-with-animation="true" style="height:{{sHight}}px" class="scroll" scroll-top="{{scrollHeight}}">
     <view class='flex player' wx:for="{{players}}" wx:key="index">
-      <view style="width: 10%;" class="user fa fa-user"> {{index+1}}</view>
+      <!-- <view style="width: 10%;" class="user fa fa-user"> {{index+1}}</view> -->
+      <view style="width: 10%;" class="user"><image class="player-img"  src='/images/player.png'></image>{{index+1}}</view>
       <block wx:if="{{!rngDesc['P'+index]}}">
         <template wx:for="{{[item+1,item+2]}}" wx:key="index" is="card" data="{{...selectCards,cards,sel,shape,color,item}}" />
       </block>
@@ -121,8 +144,8 @@
   </scroll-view>
   <view class="imageAdd">
     <image class="cardImg add" bindtap="add"  src='/images/plus.png'></image>
-    <image class="cardImg add" bindtap="reduce"  src='/images/reduce.png'></image>
-    <image class="cardImg add {{ isBottom ? '' : 'none'}}" bindtap="showResult"  src='/images/bottom.png'></image>
+    <image class="cardImg add" style="opacity:{{total == 9 ? '0.4' : '1'}}" bindtap="reduce"  src='/images/reduce.png'></image>
+    <image class="cardImg add {{ isBottom ? '' : 'none'}}" bindtap="showResult"  src='/images/share.png'></image>
   </view>
   <view class="flex btnAdd">
     <view class="btnAdd {{ isDown ? 'none' : ''}}" ><image class="arrow" bindtap="packDown" src='/images/arrow-down.png'></image></view>
@@ -143,7 +166,7 @@
       <view  class="poker"  bindtap="rng">Rng</view>
     </view>
     <view class="flex-wrp die">
-      <view style="margin-left:10px">死牌(Dead Cards):<span wx:for="{{selDead}}" wx:key="index">{{cards[item['id']]}}{{shap[item['c']]}} </span></view>
+      <view>死牌(Dead Cards): <span>{{deadDes}}</span> <!-- <span wx:for="{{selDead}}" wx:key="index">{{cards[item['id']]}}{{shap[item['c']]}} </span> --></view>
       <span bindtap="showDead" class="dieSpan">+</span>
     </view>
     <view class="flex-wrp bottom">
